<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etInputDisplay"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:autofillHints="number"
        android:inputType="number"
        android:textSize="60sp"
        android:gravity="end|center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textCursorDrawable="@null"
        android:focusableInTouchMode="false"
        android:background="@drawable/rounded_background"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etOutputDisplay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="number"
        android:inputType="number"
        android:textSize="30sp"
        android:gravity="end|center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textCursorDrawable="@null"
        android:focusableInTouchMode="false"
        android:background="@drawable/rounded_background"
        tools:ignore="LabelFor" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="bottom"
       android:layout_marginBottom="30dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingStart="20dp"
           android:paddingEnd="20dp">

           <Button
               android:id="@+id/btnAllClear"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/ac"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btnClear"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/c"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btnMod"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/mod"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btnDivision"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/div"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp"
           android:paddingStart="20dp"
           android:paddingEnd="20dp">

           <Button
               android:id="@+id/btn7"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_7"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btn8"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_8"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btn9"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_9"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btnMultiplication"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/multiply"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp"
           android:paddingStart="20dp"
           android:paddingEnd="20dp">

           <Button
               android:id="@+id/btn4"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_4"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btn5"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_5"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btn6"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_6"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btnSubtraction"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/minus"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp"
           android:paddingStart="20dp"
           android:paddingEnd="20dp">

           <Button
               android:id="@+id/btn1"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_1"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btn2"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_2"
               tools:ignore="ButtonStyle" />


           <Button
               android:id="@+id/btn3"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_3"
               tools:ignore="ButtonStyle" />


           <Button
               android:id="@+id/btnAdd"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/add"
               android:textColor="@color/blue"
               tools:ignore="ButtonStyle" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp"
           android:paddingStart="20dp"
           android:paddingEnd="20dp">

           <Button
               android:id="@+id/btn00"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_00"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btn0"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/_0"
               tools:ignore="ButtonStyle" />

           <Button
               android:id="@+id/btnDot"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:textStyle="bold"
               android:text="@string/dot"
               tools:ignore="ButtonStyle" />


           <Button
               android:id="@+id/btnEqual"
               android:layout_width="wrap_content"
               android:layout_height="80dp"
               android:layout_weight="1"
               android:textSize="22sp"
               android:text="@string/equal"
               android:backgroundTint="@color/blue"
               android:textColor="@color/white"
               tools:ignore="ButtonStyle"/>

       </LinearLayout>
   </LinearLayout>


</LinearLayout>